# 2014-pfc-Javier-Benito

./: .gitignore  README.md  drawarea.cpp  gui.cpp  main.blg  rt_estimator.glade
memoria/: bibliografia.bib  main.aux  main.bbl  main.bcf  main.blg  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc  mainç.blg
memoria/Chapters/: Conclusiones.aux  Conclusiones.tex  Desarrollo.aux  Desarrollo.tex  Experimentos.aux  Experimentos.tex  Infraestructura.aux  Infraestructura.tex  Introduccion.aux  Introduccion.tex  Objetivos.aux  Objetivos.tex
memoria/Pre-Content/: Licencia.aux  Licencia.tex  Portada.aux  Portada.tex  Resumen.aux  Resumen.tex
memoria/Presentacion/: presentacion.tex  t-gsyc-6.sty
pfc/: main.aux  main.out  main.tex
pfc/Chapters/: Infraestructura.aux  Infraestructura.tex
presentation/: .~lock.PFC-presentation-Javier-Benito.odp#
real_rt_estimator/: .gitignore  CMakeLists.txt  drawarea.cpp  drawarea.h  model.cpp  model.h  model0.cpp  myprogeo.cpp  myprogeo.h  output.txt  output.txtç  real_rt_estimator (copy).glade  real_rt_estimator.cfg  real_rt_estimator.cpp  real_rt_estimator.glade  real_rt_estimator222.glade
real_rt_estimator/config/: world.cfg
real_rt_estimator/control/: control.cpp  control.h  threadcontrol.cpp  threadcontrol.h
real_rt_estimator/gui/: gui.cpp  gui.h  threadgui.cpp  threadgui.h
rt_estimator/: .gitignore  CMakeLists.txt  drawarea.h  gui.h  model.cpp  model.h  rt_estimator.cpp
